[gd_scene load_steps=25 format=3 uid="uid://wu7rfkudc1tn"]

[ext_resource type="Script" uid="uid://blwpkg2a6mfgt" path="res://script/enemy_things.gd" id="1_18b52"]
[ext_resource type="Texture2D" uid="uid://b330u5o8q8t28" path="res://asset/Lettuce/Explosion.png" id="2_8rgcl"]
[ext_resource type="Texture2D" uid="uid://cvhp7at0vwyww" path="res://asset/Lettuce/Lettuce1.png" id="4_8rgcl"]
[ext_resource type="Texture2D" uid="uid://41vf07n2dl0n" path="res://asset/Lettuce/Lettuce2.png" id="5_ubx5j"]
[ext_resource type="Texture2D" uid="uid://d4efy3sayoxg5" path="res://asset/Lettuce/Lettuce3.png" id="6_rr8ka"]
[ext_resource type="Texture2D" uid="uid://3lk6d118oeqj" path="res://asset/Lettuce/Lettuce4.png" id="7_t0rqj"]
[ext_resource type="Texture2D" uid="uid://b7ostp6glsue6" path="res://asset/Lettuce/Lettuce5.png" id="8_sd7fa"]
[ext_resource type="Texture2D" uid="uid://dfmo5wubordjd" path="res://asset/Lettuce/Lettuce6.png" id="9_jwjqp"]
[ext_resource type="Texture2D" uid="uid://c3uaoykxxkqux" path="res://asset/Lettuce/Lettuce7.png" id="10_2fi62"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rr8ka"]
atlas = ExtResource("2_8rgcl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0rqj"]
atlas = ExtResource("2_8rgcl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd7fa"]
atlas = ExtResource("2_8rgcl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwjqp"]
atlas = ExtResource("2_8rgcl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_el2tw"]
atlas = ExtResource("4_8rgcl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf5tj"]
atlas = ExtResource("5_ubx5j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj5kx"]
atlas = ExtResource("6_rr8ka")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lkj5"]
atlas = ExtResource("7_t0rqj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnhoy"]
atlas = ExtResource("8_sd7fa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6fte"]
atlas = ExtResource("9_jwjqp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dbtc"]
atlas = ExtResource("10_2fi62")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h34l7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr8ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0rqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd7fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwjqp")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_el2tw")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf5tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj5kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lkj5")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnhoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6fte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dbtc")
}],
"loop": true,
"name": &"Rampage",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qen5"]
size = Vector2(25, 31.5556)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1eei"]
radius = 6.0
height = 33.7778

[sub_resource type="RectangleShape2D" id="RectangleShape2D_10383"]
size = Vector2(129, 33.5)

[node name="EnemyThings" type="CharacterBody2D"]
script = ExtResource("1_18b52")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 15)
scale = Vector2(1, 1.125)
sprite_frames = SubResource("SpriteFrames_h34l7")
animation = &"Rampage"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 16.25)
scale = Vector2(1, 1.125)
shape = SubResource("RectangleShape2D_1qen5")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-3, 20)
scale = Vector2(1, 1.125)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -3.55556)
shape = SubResource("CapsuleShape2D_m1eei")

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(-1, 17)
rotation = 3.14159
shape = SubResource("RectangleShape2D_10383")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
